<resources>
    <string name="app_name">project-bts</string>
    <string name="logo_bts">Logo bts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hoang">Hoang</string>
    <string name="_120">120</string>
    <string name="posts">Posts</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="this_is_a_bio">This is a bio</string>
    <string name="message">Message</string>
    <string name="cac">cac</string>
    <string name="_1_hour_ago">1 hour ago</string>
    <string name="hoang_cac_lon">hoang cac lon</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log out</string>
    <string name="have_an_account_login">Have an account? Login</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="confirm">Confirm</string>
    <string name="discard">Discard</string>
    <string name="about_me">About me</string>
    <string name="_9_13_2024_9_30">9/13/2024 9:30</string>
    <string name="_0">0</string>
    <string name="report">Report</string>
    <string name="why_are_you_reporting_this_post">Why are you reporting this post?</string>
    <string name="submit">SUBMIT</string>
    <string name="send">Send</string>
    <string name="what_s_is_on_your_mind">What\'s is on your mind?</string>
    <string name="create_post">Create post</string>
    <string name="add_image">Add Image</string>
    <string name="reset_password">Reset Password</string>
    <string name="email">Email</string>
    <string name="please_enter_your_email_address_to_receive_an_otp">Please enter your email address to receive an OTP</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="send_again_in">Send again in:</string>
    <string name="new_password">New Password</string>
    <string name="reset">Reset</string>
    <string name="beneath_the_stars">Beneath The Stars</string>
    <string name="add_status">Add_status</string>
    <string name="user_avatar">user_avatar</string>
    <string name="name_app">name_app</string>
    <string name="add_button">add_button</string>
    <string name="add_status_button">add_status_button</string>
    <string name="OtherUserAvatar">OtherUserAvatar</string>
    <string name="OtherUserName">OtherUserName</string>
    <string name="status_image">status_image</string>
    <string name="status">Status</string>
    <string name="status_comment_btn">status_comment_btn</string>
    <string name="status_like_btn">status_like_btn</string>
    <string name="like_count">like_count</string>
    <string name="status_like_count">status_like_count</string>
    <string name="comment_count">comment_count</string>
    <string name="status_comment_count">status_comment_count</string>
    <string name="confirm">Confirm</string>
    <string name="discard">Discard</string>
    <string name="about_me">About me</string>
    <string name="_9_13_2024_9_30">9/13/2024 9:30</string>
    <string name="_0">0</string>
    <string name="report">Report</string>
    <string name="why_are_you_reporting_this_post">Why are you reporting this post?</string>
    <string name="submit">SUBMIT</string>
    <string name="send">Send</string>
    <string name="about_me">About me</string>
    <string name="_9_13_2024_9_30">9/13/2024 9:30</string>
    <string name="_0">0</string>
    <string name="report">Report</string>
    <string name="why_are_you_reporting_this_post">Why are you reporting this post?</string>
    <string name="submit">SUBMIT</string>
    <string name="send">Send</string>
    <string name="what_s_is_on_your_mind">What\'s is on your mind?</string>
    <string name="create_post">Create post</string>
    <string name="add_image">Add Image</string>
    <string name="reset_password">Reset Password</string>
    <string name="email">Email</string>
    <string name="please_enter_your_email_address_to_receive_an_otp">Please enter your email address to receive an OTP</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="send_again_in">Send again in:</string>
</resources>