<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/other_user_avatar"
        android:layout_width="62dp"
        android:layout_height="64dp"
        android:contentDescription="@string/OtherUserAvatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/other_username"
        android:layout_width="274dp"
        android:layout_height="34dp"
        android:layout_marginStart="6dp"
        android:contentDescription="@string/OtherUserName"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/other_user_avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/status_image"
        android:layout_width="410dp"
        android:layout_height="473dp"
        android:contentDescription="@string/status_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/other_user_avatar"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/status"
        android:layout_width="411dp"
        android:layout_height="125dp"
        android:layout_marginTop="68dp"
        android:contentDescription="@string/status"
        android:text="@string/status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_image" />

    <ImageButton
        android:id="@+id/status_like_btn"
        android:layout_width="56dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/status_like_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_image"
        app:srcCompat="@drawable/like" />

    <ImageButton
        android:id="@+id/status_comment_btn"
        android:layout_width="56dp"
        android:layout_height="52dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/status_comment_btn"
        app:layout_constraintStart_toEndOf="@+id/status_like_count"
        app:layout_constraintTop_toBottomOf="@+id/status_image"
        app:srcCompat="@drawable/comment" />

    <TextView
        android:id="@+id/status_like_count"
        android:layout_width="48dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/status_like_count"
        android:text="@string/like_count"
        app:layout_constraintEnd_toStartOf="@+id/status_comment_btn"
        app:layout_constraintStart_toEndOf="@+id/status_like_btn"
        app:layout_constraintTop_toBottomOf="@+id/status_image" />

    <TextView
        android:id="@+id/status_comment_count"
        android:layout_width="48dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/status_comment_count"
        android:text="@string/comment_count"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toEndOf="@+id/status_comment_btn"
        app:layout_constraintTop_toBottomOf="@+id/status_image" />


</androidx.constraintlayout.widget.ConstraintLayout>